# DiffPatch

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/keyejxptwn/diffpatch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/keyejxptwn/diffpatch/: BsPatchUtils.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/keyejxptwn/diffpatch/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
